- add "--no-restore-data" to R invocation
- Fix for launching R from gretl on Windows XP
- Fix problems created by tabs in the command line
- Two-stage least squares: add list of instruments to printout
  of model results
- Improve the mechanism for detecting the presence of a lagged
  dependent variable in a regression list
- Fix bug in graph editing for non-English locales

10/24/2003 version 1.1.5
- Updates to manual
- Gtk2 version: Make selection dialog tall enough for wls,
  tsls and ar model selections
- Model window, graph menu: if there are two independent vars,
  offer the option of a 3D fitted/actual plot
- Set sample range: in this dialog, give as default the current
  sample range, not the full data range
- When a session uses data imported from a database, be smarter
  on saving the session: ensure the script includes a command
  to open a datafile (get this saved first if need be)
- Database browser window: close this when a database is
  selected
- GUI model windows: allow drawing of graphs relating to model
  data, even if the sample has been changed since the model
  was estimated
- Model table: make a LaTeX preview available
- Windows installation: fix typo in name of uninstaller program 
  in the Programs menu
- Windows version: bug fixes and enhancements for gretl_updater,
  and add a simple logging mechanism to aid in trouble-shooting
- Windows: add the ability to print a gnuplot graph directly
- ols command: add '-q' (quiet) option to suppress printing of 
  results (and add notice of this to gretlcli.hlp)
- Consolidate "webget" code -- one version for all uses
- gtk2 version: replace "system()" calls with g_spawn()
- Add model selection statistics to output of adf command
- Improve recognition of dated data when importing from Excel
  or Gnumeric
- Add an error message for an attempt to run TRAMO when the
  sample size is > 600
- Fixes for reading of plot range info in graph window in
  non-English locales

10/06/2003 version 1.1.4