@@ -8,6 +8,9 @@ version 1.1.6
 - Improve the mechanism for detecting the presence of a lagged
   dependent variable in a regression list
 - Fix bug in graph editing for non-English locales
+- genr command: add facility for using date strings in boolean
+  comparisons, e.g. "genr dummy = t > 1973:4" will work for 
+  quarterly data
 
 10/24/2003 version 1.1.5
 - Updates to manual
